syntax = "proto3";

package proto;

option go_package = "./pbgen";

import "google/api/annotations.proto";

service Greeter {
    rpc Greet (GreetRequest) returns (GreetResponse) {
        option (google.api.http) = {
            get: "/api/v1/greet"
        };
    };

    rpc GreetStream(GreetRequest) returns (stream GreetResponse) {};

    rpc GreetRecord(stream GreetRequest) returns (GreetResponse) {};
}

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string message = 1;
}
